# libsarif

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  generate.sh
include/: libsarif.hpp
